Поменял код для работы с консолью Проверки есть Скорее всего конечная версия