@@ -1,8 +1,9 @@
 public class ATC {
-
     private String address;
     private int subscribersCount;
     private int monthlyFee;
+
+    public ATC() { }
 
     public ATC(String address, int subscribersCount, int monthlyFee) {
         setAddress(address);
@@ -11,106 +12,41 @@ public class ATC {
     }
 
     public void setAddress(String address) {
-        if (address == null || address.isBlank()) {
+        if (address == null || address.trim().isEmpty()) {
             System.out.println("Ошибка: адрес пустой!");
             return;
         }
-
-        String s = address.trim();
-
-        while (s.contains("  ")) {
-            s = s.replace("  ", " ");
-        }
-
-        if (s.length() < 3 || s.length() > 120) {
-            System.out.println("Ошибка: длина адреса от 3 до 120 символов.");
-            return;
-        }
-
-        if (!s.matches("[\\p{L}\\p{N}\\s.,\\-/#№()]+")) {
-            System.out.println("Ошибка: адрес содержит недопустимые символы.");
-            return;
-        }
-
-        if (!s.chars().anyMatch(Character::isLetter)) {
-            System.out.println("Ошибка: адрес должен содержать буквы.");
-            return;
-        }
-
-        this.address = s;
+        this.address = address.trim();
     }
-
 
     public void setSubscribersCount(int subscribersCount) {
         if (subscribersCount < 0) {
-            System.out.println("Введено отрицательное значение кол-ва подписчиков");
+            System.out.println("Ошибка: число абонентов не может быть отрицательным");
             this.subscribersCount = 0;
-        } else {
-            this.subscribersCount = subscribersCount;
-        }
-    }
-
-    public void setSubscribersCount(String input) {
-        if (input == null) {
-            System.out.println("Введено некорректное значение кол-ва подписчиков");
             return;
         }
-        String s = input.trim();
-        if (!s.matches("\\d+")) {
-            System.out.println("Введено некорректное значение кол-ва подписчиков");
-            return;
-        }
-        try {
-            setSubscribersCount(Integer.parseInt(s));
-        } catch (NumberFormatException e) {
-            System.out.println("Введено некорректное значение кол-ва подписчиков");
-        }
+        this.subscribersCount = subscribersCount;
     }
-
 
     public void setMonthlyFee(int monthlyFee) {
         if (monthlyFee < 0) {
-            System.out.println("Введено отрицательное значение месячной подписки");
+            System.out.println("Ошибка: абонентская плата не может быть отрицательной");
             this.monthlyFee = 0;
             return;
         }
-
         this.monthlyFee = monthlyFee;
-
     }
 
-    public void setMonthlyFee(String input) {
-        if (input == null) {
-            System.out.println("Введено некорректное значение месячной подписки");
-            return;
-        }
-        String s = input.trim();
-        if (!s.matches("\\d+")) {
-            System.out.println("Введено некорректное значение месячной подписки");
-            return;
-        }
-        try {
-            setMonthlyFee(Integer.parseInt(s));
-        } catch (NumberFormatException e) {
-            System.out.println("Введено некорректное значение месячной подписки");
-        }
-    }
-
-
-    public int computeTotalMonthlyFee() {
-        return monthlyFee * subscribersCount;
-    }
-
-    public String getAddress() {
-        return address;
+    public long computeTotalMonthlyFee() {
+        return (long) monthlyFee * (long) subscribersCount;
     }
 
     public int getMonthlyFee() { return monthlyFee; }
 
-    @Override
-    public String toString() {
-        return "ATC: по адресу:" + address + ", абонентская плата = " + monthlyFee + "руб";
+    public String getAddress() { return address; }
+
+    public void print() {
+        System.out.println("Адрес АТС: " + address);
+        System.out.println("Абонентская плата: " + computeTotalMonthlyFee());
     }
-
-
 }
